Menerapkan Push Notification

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 
       <nav id="navigation-drawer" class="navigation-drawer">
         <ul id="nav-list" class="nav-list">
+          <li id="notification-tools"></li>
           <li><a href="#/">Beranda</a></li>
           <li><a href="#/about">About</a></li>
           <li><a href="#/stories">Stories</a></li>
