--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="/favicon.png" />
   <title>App</title>
 
+  <link rel="manifest" href="app.webmanifest" />
   <script type="module" src="/scripts/index.js"></script>
 </head>
 
