Implementasi IndexedDB & Menambahkan Halaman Not Found

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,9 @@
   </header>
 
   <main id="main-content" class="main-content"></main>
-  <footer>Copyright&copy; Created by D 2025</footer>
+  <footer>
+    <div>Copyright&copy; Created by D 2025</div>
+  </footer>
 </body>
 
 </html>
